--- a/apps/journal/static/journal/css/all.css
+++ b/apps/journal/static/journal/css/all.css
@@ -1,197 +1,2 @@
-.item-table, .desc-table {
-  font-size: 10pt; }
-  @media (min-width: 768px) {
-    .item-table, .desc-table {
-      font-size: 12pt; } }
-
-.item-table {
-  border-collapse: collapse;
-  width: 100%; }
-  .item-table td {
-    width: 100%;
-    display: block;
-    padding-bottom: 5px;
-    vertical-align: top; }
-    @media (min-width: 768px) {
-      .item-table td {
-        width: auto;
-        display: table-cell; } }
-    .item-table td:nth-child(1) {
-      font-weight: bold;
-      padding-right: 15px; }
-      @media (min-width: 768px) {
-        .item-table td:nth-child(1) {
-          padding-bottom: 25px; } }
-    .item-table td:nth-child(2) {
-      padding-bottom: 20px;
-      vertical-align: middle;
-      width: 100%; }
-      .item-table td:nth-child(2) * {
-        vertical-align: middle;
-        display: inline-block; }
-      @media (min-width: 768px) {
-        .item-table td:nth-child(2) {
-          padding-bottom: 25px; } }
-
-.desc-table {
-  border-collapse: collapse; }
-  .desc-table td {
-    width: auto;
-    display: table-cell;
-    padding-bottom: 5px;
-    vertical-align: middle; }
-    .desc-table td:nth-child(1) {
-      font-weight: bold;
-      padding-right: 15px;
-      padding-bottom: 25px; }
-    .desc-table td:nth-child(2) {
-      padding-bottom: 25px;
-      vertical-align: middle; }
-      .desc-table td:nth-child(2) * {
-        vertical-align: middle;
-        display: inline-block; }
-  .desc-table .tag-text.both {
-    padding-left: .3em; }
-  .desc-table .tag-icon {
-    height: 25px;
-    display: inline-block; }
-    .desc-table .tag-icon.category-activity {
-      height: 25px; }
-
-.entry-summary {
-  font-size: 10pt; }
-  @media (min-width: 768px) {
-    .entry-summary {
-      font-size: 12pt; } }
-
-.more {
-  order: 998;
-  height: 100%;
-  width: 100%;
-  background: rgba(237, 184, 139, 0.75);
-  position: relative;
-  cursor: pointer; }
-  .more span {
-    background: white;
-    color: rgba(237, 184, 139, 0.75);
-    position: absolute;
-    max-width: 80%;
-    padding: 10px;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: 'Montserrat';
-    font-weight: normal;
-    font-size: 12px; }
-    @media (min-width: 480px) {
-      .more span {
-        font-size: 14px; } }
-    @media (min-width: 768px) {
-      .more span {
-        font-size: 16px; } }
-  .more .cover-wrap {
-    width: 100%;
-    height: 100%;
-    overflow: hidden; }
-    .more .cover-wrap:hover .cover {
-      transform: scale(1.1); }
-
-#entry-table {
-  margin: auto;
-  max-width: 100%;
-  border-collapse: collapse; }
-  #entry-table td, #entry-table th {
-    height: 50px;
-    vertical-align: middle;
-    padding-left: 20px;
-    padding-right: 20px; }
-    #entry-table td *, #entry-table th * {
-      vertical-align: middle;
-      display: inline-block; }
-  #entry-table thead {
-    border-bottom: 1px solid black; }
-  #entry-table .row {
-    cursor: pointer;
-    transition: background-color .3s ease-in; }
-    #entry-table .row:hover {
-      background: rgba(237, 184, 139, 0.5); }
-  #entry-table .td-title {
-    max-width: 300px;
-    word-wrap: break-word; }
-  #entry-table .td-empty {
-    text-align: center; }
-  #entry-table .td-activity {
-    text-align: center; }
-  #entry-table .td-gallery {
-    text-align: center; }
-  #entry-table .tag-text.both {
-    padding-left: .3em; }
-  #entry-table .tag-icon {
-    width: 20px;
-    display: inline-block; }
-    #entry-table .tag-icon.category-activity {
-      width: 30px; }
-  #entry-table .td-title {
-    max-width: 300px;
-    word-wrap: break-word;
-    align-self: center; }
-  #entry-table td::before {
-    display: none; }
-  @media screen and (max-width: 992px) {
-    #entry-table td, #entry-table th {
-      height: 50px;
-      vertical-align: middle;
-      padding-left: 0px;
-      padding-right: 0px; }
-    #entry-table .row {
-      padding-bottom: 20px;
-      padding-top: 20px;
-      border-bottom: 2px solid black; }
-      #entry-table .row:last-child {
-        border-bottom: 0px solid black; }
-    #entry-table thead {
-      position: absolute;
-      opacity: 0; }
-    #entry-table tbody {
-      display: block;
-      width: 300px; }
-    #entry-table tr {
-      display: block; }
-    #entry-table td {
-      display: flex; }
-      #entry-table td * {
-        align-self: center; }
-    #entry-table td::before {
-      display: inline-block;
-      align-self: center;
-      margin-right: auto;
-      padding-right: .2em; }
-    #entry-table .td-title::before {
-      display: none; }
-    #entry-table .td-title {
-      font-weight: bold; }
-    #entry-table td:last-child {
-      border-bottom: 0; } }
-  @media screen and (max-width: 480px) {
-    #entry-table tbody {
-      font-size: 10pt;
-      display: block;
-      width: 235px; }
-    #entry-table td, #entry-table th {
-      height: 40px; } }
-
-#filter {
-  border-collapse: collapse;
-  margin: auto; }
-  #filter td {
-    padding: 5px; }
-    #filter td select {
-      width: 100%; }
-    #filter td input {
-      margin-left: 10px; }
-      @media (min-width: 480px) {
-        #filter td input {
-          margin-left: 25px; } }
-
+.item-table,.desc-table{font-size:10pt}@media (min-width: 768px){.item-table,.desc-table{font-size:12pt}}.item-table{border-collapse:collapse;width:100%}.item-table td{width:100%;display:block;padding-bottom:5px;vertical-align:top}@media (min-width: 768px){.item-table td{width:auto;display:table-cell}}.item-table td:nth-child(1){font-weight:bold;padding-right:15px}@media (min-width: 768px){.item-table td:nth-child(1){padding-bottom:25px}}.item-table td:nth-child(2){padding-bottom:20px;vertical-align:middle;width:100%}.item-table td:nth-child(2) *{vertical-align:middle;display:inline-block}@media (min-width: 768px){.item-table td:nth-child(2){padding-bottom:25px}}.desc-table{border-collapse:collapse}.desc-table td{width:auto;display:table-cell;padding-bottom:5px;vertical-align:middle}.desc-table td:nth-child(1){font-weight:bold;padding-right:15px;padding-bottom:25px}.desc-table td:nth-child(2){padding-bottom:25px;vertical-align:middle}.desc-table td:nth-child(2) *{vertical-align:middle;display:inline-block}.desc-table .tag-text.both{padding-left:.3em}.desc-table .tag-icon{height:25px;display:inline-block}.desc-table .tag-icon.category-activity{height:25px}.entry-summary{font-size:10pt}@media (min-width: 768px){.entry-summary{font-size:12pt}}.entry-tag{height:100%;display:inline-block;vertical-align:middle;cursor:pointer;margin-bottom:3px}.entry-tag img{height:25px;vertical-align:middle}.entry-tag span{vertical-align:middle;padding-left:.3em}.entry-tag :hover{text-decoration:underline}.entry-tag-comma{vertical-align:middle;font-size:125%;padding-left:.1em}.more{order:998;height:100%;width:100%;background:rgba(237,184,139,0.75);position:relative;cursor:pointer}.more span{background:white;color:rgba(237,184,139,0.75);position:absolute;max-width:80%;padding:10px;text-align:center;top:50%;left:50%;transform:translate(-50%, -50%);font-family:'Montserrat';font-weight:normal;font-size:12px}@media (min-width: 480px){.more span{font-size:14px}}@media (min-width: 768px){.more span{font-size:16px}}.more .cover-wrap{width:100%;height:100%;overflow:hidden}.more .cover-wrap:hover .cover{transform:scale(1.1)}#entry-table{margin:auto;max-width:100%;border-collapse:collapse}#entry-table td,#entry-table th{height:50px;vertical-align:middle;padding-left:20px;padding-right:20px}#entry-table td *,#entry-table th *{vertical-align:middle;display:inline-block}#entry-table thead{border-bottom:1px solid black}#entry-table .row{cursor:pointer;transition:background-color .3s ease-in}#entry-table .row:hover{background:rgba(237,184,139,0.5)}#entry-table .td-title{max-width:300px;word-wrap:break-word}#entry-table .td-empty{text-align:center}#entry-table .td-activity{text-align:center}#entry-table .td-gallery{text-align:center}#entry-table .tag-text.both{padding-left:.3em}#entry-table .tag-icon{width:20px;display:inline-block}#entry-table .tag-icon.category-activity{width:30px}#entry-table .td-title{max-width:300px;word-wrap:break-word;align-self:center}#entry-table td::before{display:none}@media screen and (max-width: 992px){#entry-table td,#entry-table th{height:50px;vertical-align:middle;padding-left:0px;padding-right:0px}#entry-table .row{padding-bottom:20px;padding-top:20px;border-bottom:2px solid black}#entry-table .row:last-child{border-bottom:0px solid black}#entry-table thead{position:absolute;opacity:0}#entry-table tbody{display:block;width:300px}#entry-table tr{display:block}#entry-table td{display:flex}#entry-table td *{align-self:center}#entry-table td::before{display:inline-block;align-self:center;margin-right:auto;padding-right:.2em}#entry-table .td-title::before{display:none}#entry-table .td-title{font-weight:bold}#entry-table td:last-child{border-bottom:0}}@media screen and (max-width: 480px){#entry-table tbody{font-size:10pt;display:block;width:235px}#entry-table td,#entry-table th{height:40px}}#filter{border-collapse:collapse;margin:auto}#filter td{padding:5px}#filter td select{width:100%}#filter td input{margin-left:10px}@media (min-width: 480px){#filter td input{margin-left:25px}}
 /*# sourceMappingURL=all.css.map */
