--- a/agimpel_com/templates/menu.html
+++ b/agimpel_com/templates/menu.html
@@ -18,12 +18,12 @@
             <td>
                 <ul>
                     <li><a class="" href="/"><i class="fa-fw fas fa-home"></i> Home</a></li>
+                    <li><a class="" href="/about"><i class="fa-fw fas fa-id-card"></i> About me</a></li>
                     <li><a class="" href="/gallery"><i class="fa-fw fas fa-camera"></i> Gallery</a></li>
                     <li><a class="" href="/photostream"><i class="fa-fw fas fa-images"></i> Photostream</a></li>
-                    <li><a class="" href="/journal"><i class="fa-fw fas fa-route"></i> Journal</a></li>
+                    <!-- <li><a class="" href="/journal"><i class="fa-fw fas fa-route"></i> Journal</a></li> -->
                     <li><a class="" href="/projects"><i class="fa-fw fas fa-briefcase"></i> Projects</a>
-                    <li><a class="show-hm" href="/about"><i class="fa-fw fas fa-user"></i> About</a>
-                    <li><a class="show-hm" href="/contact"><i class="fa-fw fas fa-envelope"></i> Contact</a>
+                    <!-- <li><a class="show-hm" href="/imprint"><i class="fa-fw fas fa-envelope"></i> Imprint</a> -->
                     </li>
                 </ul>
             </td>
@@ -51,9 +51,7 @@
                         </td>
                         <td>
                             <p>
-                                <a href="/about">about</a>
-                                <br>
-                                <a href="/contact">contact</a>
+                                <a href="/imprint">imprint</a>
                             </p>
                         </td>
                     </tr>
