--- a/apps/projects/static/projects/css/all.scss
+++ b/apps/projects/static/projects/css/all.scss
@@ -17,3 +17,12 @@
     @media (min-height: 550px) { @content; }
 }
 
+
+.projects_learnmore {
+    color: #edb88b;
+}
+
+.projects_list {
+    padding-bottom: 5px;
+    text-align: left;
+}
