--- a/apps/basic/templates/basic/index.html
+++ b/apps/basic/templates/basic/index.html
@@ -35,9 +35,9 @@
 							<div id="index-wrapper">
 								<div id="box-wrapper">
 									<div id="title-box"><p>Andreas Gimpel</p></div>
+									<a href="/about" class="home-box"><div><p>About me</p></div></a>
 									<a href="/gallery" class="home-box"><div><p>Gallery</p></div></a>
 									<a href="/photostream" class="home-box"><div><p>Photostream</p></div></a>
-									<a href="/journal" class="home-box"><div><p>Journal</p></div></a>
 									<a href="/projects" class="home-box"><div><p>Projects</p></div></a>
 								</div>
 								<div id="background-switcher-wrapper">
