--- a/apps/photostream/static/photostream/css/all.css
+++ b/apps/photostream/static/photostream/css/all.css
@@ -1,2 +1,111 @@
-.pswp__caption__center .photo_title{font-family:'Montserrat', serif;font-size:18px;padding-bottom:4px;font-weight:normal}.pswp__caption__center .photo_title{font-family:'Montserrat', sans-serif;padding-bottom:4px;font-weight:normal}.pswp__caption__center .photo_exifinfo{width:100%;display:inline-flex;justify-content:space-between;flex-wrap:wrap}.pswp__caption__center .photo_exifinfo span{font-family:'Montserrat', sans-serif;font-weight:normal}.pswp__caption__center .photo_more a{color:#edb88b;font-family:'Montserrat', serif;font-weight:normal}.single{text-align:center}.single .photo_title{font-family:'Montserrat', serif;font-size:16px;padding-bottom:5px;font-weight:normal}@media (min-width: 768px){.single .photo_title{font-size:24px}}.single .photo_date{font-family:'Montserrat', sans-serif;font-size:8pt;font-weight:normal;line-height:1.35;padding-bottom:5px}@media (min-width: 768px){.single .photo_date{font-size:10pt}}.single .photo_exifinfo span{font-family:'Montserrat', sans-serif;font-size:8pt;font-weight:normal;line-height:1.35;padding-right:.75em}.single .photo_exifinfo span:nth-child(1){display:block}@media (min-width: 480px){.single .photo_exifinfo span:nth-child(1){display:inline}}@media (min-width: 768px){.single .photo_exifinfo span{font-size:10pt}}.single .photo_description{font-family:'Montserrat', serif;font-weight:normal;font-size:10pt}@media (min-width: 768px){.single .photo_description{font-size:12pt}}.single .photo_description a{text-decoration:underline}.single .photo_tags{font-family:'Montserrat', serif;font-weight:normal;font-size:10pt}@media (min-width: 768px){.single .photo_tags{font-size:12pt}}.single .photo_tags a{text-decoration:underline}.photo-gallery.grid{display:grid;grid-template-columns:repeat(auto-fit, 100px);grid-auto-rows:100px;grid-gap:15px;align-content:center;justify-content:left;grid-auto-flow:row dense}@media (min-width: 992px){.photo-gallery.grid{grid-template-columns:repeat(auto-fit, 200px);grid-auto-rows:200px}}.photo-gallery.grid figure{width:100%;height:100%;place-self:center}.photo-gallery.grid figure a{width:100%;height:100%}.photo-gallery.grid figure a img{object-fit:cover;width:100%;height:100%}.photo-gallery.single{width:100%;height:auto}.photo-gallery.single figure{width:100%;height:100%}.photo-gallery.single figure a img{max-height:70vh;max-width:100%;margin-left:auto;margin-right:auto}
+.pswp__caption__center .photo_title {
+  font-family: 'Montserrat', serif;
+  font-size: 18px;
+  padding-bottom: 4px;
+  font-weight: normal; }
+.pswp__caption__center .photo_title {
+  font-family: 'Montserrat', sans-serif;
+  padding-bottom: 4px;
+  font-weight: normal; }
+.pswp__caption__center .photo_exifinfo {
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-between;
+  flex-wrap: wrap; }
+  .pswp__caption__center .photo_exifinfo span {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: normal; }
+.pswp__caption__center .photo_more a {
+  color: #edb88b;
+  font-family: 'Montserrat', serif;
+  font-weight: normal; }
+
+.single {
+  text-align: center; }
+  .single .photo_title {
+    font-family: 'Montserrat', serif;
+    font-size: 16px;
+    padding-bottom: 5px;
+    font-weight: normal; }
+    @media (min-width: 768px) {
+      .single .photo_title {
+        font-size: 24px; } }
+  .single .photo_date {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 8pt;
+    font-weight: normal;
+    line-height: 1.35;
+    padding-bottom: 5px; }
+    @media (min-width: 768px) {
+      .single .photo_date {
+        font-size: 10pt; } }
+  .single .photo_exifinfo span {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 8pt;
+    font-weight: normal;
+    line-height: 1.35;
+    padding-right: .75em; }
+    .single .photo_exifinfo span:nth-child(1) {
+      display: block; }
+      @media (min-width: 480px) {
+        .single .photo_exifinfo span:nth-child(1) {
+          display: inline; } }
+    @media (min-width: 768px) {
+      .single .photo_exifinfo span {
+        font-size: 10pt; } }
+  .single .photo_description {
+    font-family: 'Montserrat', serif;
+    font-weight: normal;
+    font-size: 10pt; }
+    @media (min-width: 768px) {
+      .single .photo_description {
+        font-size: 12pt; } }
+    .single .photo_description a {
+      text-decoration: underline; }
+  .single .photo_tags {
+    font-family: 'Montserrat', serif;
+    font-weight: normal;
+    font-size: 10pt; }
+    @media (min-width: 768px) {
+      .single .photo_tags {
+        font-size: 12pt; } }
+    .single .photo_tags a {
+      text-decoration: underline; }
+
+.photo-gallery.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 100px);
+  grid-auto-rows: 100px;
+  grid-gap: 15px;
+  align-content: center;
+  justify-content: left;
+  grid-auto-flow: row dense; }
+  @media (min-width: 992px) {
+    .photo-gallery.grid {
+      grid-template-columns: repeat(auto-fit, 200px);
+      grid-auto-rows: 200px; } }
+  .photo-gallery.grid figure {
+    width: 100%;
+    height: 100%;
+    place-self: center; }
+    .photo-gallery.grid figure a {
+      width: 100%;
+      height: 100%; }
+      .photo-gallery.grid figure a img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%; }
+
+.photo-gallery.single {
+  width: 100%;
+  height: auto; }
+  .photo-gallery.single figure {
+    width: 100%;
+    height: 100%; }
+    .photo-gallery.single figure a img {
+      max-height: 70vh;
+      max-width: 100%;
+      margin-left: auto;
+      margin-right: auto; }
+
 /*# sourceMappingURL=all.css.map */
