--- a/apps/basic/templates/basic/about.html
+++ b/apps/basic/templates/basic/about.html
@@ -1,6 +1,8 @@
 {% extends 'main.html' %}
 
 {% block add_head %}
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'basic/css/all.css' %}"> 
 {% endblock add_head %}
 
 {% block menu %}
